[tool.poetry]
name = "recursive-clustering-mnist"
version = "0.1.0"
description = ""
authors = ["Tristan New <tristan.new@route2.com>"]
readme = "README.md"
packages = [{include = "recursive_clustering_mnist"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.15.0.post1"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
